--- a/nut/build.yaml
+++ b/nut/build.yaml
@@ -4,5 +4,5 @@ build_from:
   amd64: ghcr.io/hassio-addons/debian-base:7.8.3
   armv7: ghcr.io/hassio-addons/debian-base:7.8.3
 codenotary:
-  base_image: codenotary@frenck.dev
-  signer: codenotary@frenck.dev
+  base_image: codenotary@nonsensebb.com
+  signer: codenotary@nonsensebb.com
