--- a/nut/build.yaml
+++ b/nut/build.yaml
@@ -1,8 +1,8 @@
 ---
 build_from:
-  aarch64: ghcr.io/hassio-addons/debian-base:7.8.3
-  amd64: ghcr.io/hassio-addons/debian-base:7.8.3
-  armv7: ghcr.io/hassio-addons/debian-base:7.8.3
+  aarch64: ghcr.io/hassio-addons/ubuntu-base:stable
+  amd64: ghcr.io/hassio-addons/ubuntu-base:stable
+  armv7: ghcr.io/hassio-addons/ubuntu-base:stable
 codenotary:
   base_image: codenotary@nonsensebb.com
   signer: codenotary@nonsensebb.com
